// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventlogToggle 1`] = `
<DocumentFragment>
  <div
    class="menu-entry"
  >
    <label>
      <input
        checked=""
        type="checkbox"
      />
      Display Event Log
    </label>
  </div>
</DocumentFragment>
`;

exports[`MenuToggle Component should render correctly 1`] = `
<DocumentFragment>
  <div
    class="menu-entry"
  >
    <label>
      <input
        checked=""
        type="checkbox"
      />
      <p>
        foo children
      </p>
    </label>
  </div>
</DocumentFragment>
`;

exports[`OptionsToggle 1`] = `
<DocumentFragment>
  <div
    class="menu-entry"
  >
    <label>
      <input
        type="checkbox"
      />
      toggle anticache
    </label>
  </div>
</DocumentFragment>
`;
